After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 732695 - window-list extension not loading in GNOME 3.13.3
window-list extension not loading in GNOME 3.13.3
Status: VERIFIED FIXED
Product: gnome-shell
Classification: Core
Component: extensions
3.13.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2014-07-03 15:50 UTC by Stephen Gallagher
Modified: 2014-07-28 15:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screen: Tweak workspace initialization (again) (2.05 KB, patch)
2014-07-10 15:51 UTC, Florian Müllner
committed Details | Review

Description Stephen Gallagher 2014-07-03 15:50:19 UTC
Looking Glass reports:
global.screen.get_active_workspace(...) is null


I'm not sure where to look for additional details.
Comment 1 Stephen Gallagher 2014-07-03 15:50:57 UTC
For the record, I'm running on Fedora Rawhide with the latest available GNOME 3.13.3 packages.
Comment 2 Florian Müllner 2014-07-10 15:51:07 UTC
Created attachment 280419 [details] [review]
screen: Tweak workspace initialization (again)

Commit 8100cefd4c34a fixed a crash during workspace initialization by
tweaking the startup sequence; as a result, the plugin (like gnome-shell)
is now started before workspaces are fully initialized, which breaks
some reasonable assumptions (like always having an active workspace).
This is particularly problematic considering that the code making those
assumptions is not necessarily our own (extensions!), so return to
fully initialize workspaces before the compositor again.
At the same time, make sure to only call meta_workspace_activate()
once during initialization to avoid reintroducing the crash.
Comment 3 Florian Müllner 2014-07-10 15:51:35 UTC
Attachment 280419 [details] pushed as 06a3199 - screen: Tweak workspace initialization (again)
Comment 4 Stephen Gallagher 2014-07-28 15:46:26 UTC
Confirmed, this is working with gnome-shell-3.13.4-1.fc21.x86_64 and gnome-shell-extension-window-list-3.13.4-1.fc21.noarch